--- a/preamble.tex
+++ b/preamble.tex
@@ -56,7 +56,7 @@
 \newtheorem{problem}[theorem]{Problem}
 
 %numbering
-\numberwithin{equation}{section} %Can replace {subsection} with {theorem} if you want
+\numberwithin{equation}{subsection} %Can replace {subsection} with {theorem} if you want
 
 %spacing
 \usepackage{setspace}
